--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9",
+        "prettus/l5-repository": "^2.9",
         "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
